--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,16 @@
 @import "bootstrap";
 @import "font-awesome-sprockets";
 @import "font-awesome";
+
+.row, .h3 {
+  text-align: center;
+}
+
+.col-xs-2 {
+  margin-top: 30%;
+}
+
+.panel-primary {
+  margin: 10px 0 10px 0;
+
+}
