--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,5 +1,5 @@
 <h3>Would you Rather</h3>
-<%= form_for @question do |f| %>
+<%= form_for @question, remote: true do |f| %>
   <%= f.label :answer_A %>
   <%= f.text_field :answer_A %>
   <%= f.label :picture_A %>
