--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,15 +1,36 @@
-<% if @questions.any? %>
-  <% @questions.each do |question| %>
-  <div>
-    <h3>Would You Rather</h3>
-    <%= render partial: 'vote_A', collection: @questions, :locals => {:@question => question, :votes_A => 'true'} %><br>
-    <%= question.answer_B %><img src="<%= question.picture_B %>"><br>
-    <%= link_to '[+/-]', edit_question_path(question) %>
-    <%= link_to '[x]', question_path(question), data: {confirm: 'You sure?', method: 'delete'} %>
-  </div>
-  <% end %>
-<% else %>
-  <h3>Ask a question.</h3>
-<% end %>
-
+<div class="container">
+  <div id="add_output"></div>
+    <% if @questions.any? %>
+    <div id="test_name">
+      <% @questions.each do |question| %>
+        <div class="panel panel-primary">
+          <div class="panel-heading"><h3>Would You Rather</h3></div>
+          <div class="panel-body">
+            <div class="col-xs-5">
+              <%= render partial: 'vote_A', :locals => {:@question => question, :votes_A => 'true'} %><br>
+            </div>
+            <div class="col-xs-2">
+              votes A: <%= @question.votes_A %> <br />
+              votes B: <%= @question.votes_B %> <br />
+              total votes: <br />
+              <%= @question.total %>
+            </div>
+            <div class="col-xs-5">
+              <%= render partial: 'vote_B', :locals => {:@question => question, :votes_B => 'true'} %><br><br>
+            </div>
+          </div>
+          <div class="panel-footer">
+            <%= link_to 'edit', edit_question_path(question), class: 'btn btn-warning' %>
+            <%= link_to 'delete', question_path(question), class: 'btn btn-danger', data: {confirm: 'You sure?', method: 'delete'} %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <% else %>
+      <h3>Ask a question.</h3>
+    <% end %>
+<hr>
+</div>
+<br />
 <%= link_to 'Add Question', new_question_path, class: "btn btn-success"  %>
+<%= link_to 'Add Question AJAX', new_question_path,  remote: true %>
