ajax for adding a question and voting. image upload. works.

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,15 +1,14 @@
-<h3>Would you Rather</h3>
 <%= form_for @question, remote: true do |f| %>
   <%= f.label :answer_A %>
   <%= f.text_field :answer_A %>
   <%= f.label :picture_A %>
-  <%= f.text_field :picture_A %>
+  <%= f.file_field :picture_A %>
 <br />
   <%= f.label :answer_B %>
   <%= f.text_field :answer_B %>
   <%= f.label :picture_B %>
-  <%= f.text_field :picture_B %>
+  <%= f.file_field :picture_B %>
 <br />
-
+<%= hidden_field_tag :authenticity_token, form_authenticity_token %>
   <%= f.submit %>
 <% end %>
