--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,7 @@
       <div id="navbar" class="navbar-collapse collapse">
         <ul class="nav navbar-nav">
           <li class="active"><%= link_to 'Home', root_path %></li>
-          <li><%= link_to 'Add Question', new_question_path, remote: true %></li>
+          <li><%= link_to 'Add Question', new_question_path, remote: true, id: "addq" %></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div><!--/.nav-collapse -->
